    <string name="action_settings">Settings</string>
    <string name="app_name">transform-tencent-app</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="com_tencent_ysdk_real_name_agreement"><u>用户隐私和保护策略</u></string>
    <string name="com_tencent_ysdk_real_name_agreement_ok">同意</string>
    <string name="com_tencent_ysdk_real_name_agreement_tips">请勾选用户隐私和保护政策</string>
    <string name="com_tencent_ysdk_real_name_agreement_url">http://game.qq.com/contract.shtml</string>
    <string name="com_tencent_ysdk_real_name_back">返回首页</string>
    <string name="com_tencent_ysdk_real_name_commit">提交认证信息</string>
    <string name="com_tencent_ysdk_real_name_commit_progress_msg">提交中请稍后……</string>
    <string name="com_tencent_ysdk_real_name_des1">您的%1$s账号%2$s尚未进行实名注册。按照文化部《网络游戏管理暂行办法》的相关要求，网络游戏用户需要使用有效身份证件进行实名注册才可登录游戏。</string>
    <string name="com_tencent_ysdk_real_name_des1_qq_str">手Q</string>
    <string name="com_tencent_ysdk_real_name_des1_wx_str">微信</string>
    <string name="com_tencent_ysdk_real_name_des2">"*身份证信息只能提交一次不可修改，请慎重填写
*您的身份证信息仅用于实名认证，我们不会将此信息用于其他任何场景。"</string>
    <string name="com_tencent_ysdk_real_name_dialog_webview_title">腾讯游戏许可及服务协议</string>
    <string name="com_tencent_ysdk_real_name_fail">认证失败</string>
    <string name="com_tencent_ysdk_real_name_fail_count_limit">该证件号已经绑定多个号码，请更换证件号重试（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_invalid_birth">提供的出生日期不正确，请提供正确的出生日期（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_invalid_id">提供的身份证件为非法证件，请提供有效地身份证件（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_invalid_name">提供的中文姓名不合法，请提供有效的中文姓名（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_invalid_para">输入参数错误，请重试（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_reg_already">该账号已实名认证，请重新登录游戏（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_fail_server_error">系统错误，请重试（%1$s）。</string>
    <string name="com_tencent_ysdk_real_name_identity_num">请输入有效证件号码</string>
    <string name="com_tencent_ysdk_real_name_identity_type">请选择有效证件类型</string>
    <string name="com_tencent_ysdk_real_name_login">登录游戏</string>
    <string name="com_tencent_ysdk_real_name_name">请输入您的姓名</string>
    <string name="com_tencent_ysdk_real_name_qq">客服QQ:1000</string>
    <string name="com_tencent_ysdk_real_name_success">认证成功</string>
    <string name="com_tencent_ysdk_real_name_success_des">"您的账号实名认证成功!
您现在可以登录游戏。"</string>
    <string name="com_tencent_ysdk_real_name_title">实名认证</string>
    <string name="com_tencent_ysdk_real_name_tryagain">重新输入</string>
    <string name="disconnected_setting">重新加载</string>
    <string name="error_title">出错啦</string>
    <string name="error_word">哎呀~没有网络啦~</string>
    <string name="floating_window_result_release_memory_tips">%s内存已清理</string>
    <string name="force_pop_view_content">10月17，18日，QQ币礼包大放送</string>
    <string name="force_pop_view_title">周末礼包限时抢</string>
    <string name="gdtslogan">GDTslogan</string>
    <string name="hello_world">单击home键开启悬浮窗</string>
    <string name="message_text">消息</string>
