<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/com_tencent_ysdk_real_name_auth_title_size" android:textStyle="bold" android:textColor="#fff5f5f5" android:gravity="center" android:background="@color/com_tencent_ysdk_real_name_title_color" android:paddingLeft="15.0dip" android:paddingTop="@dimen/com_tencent_ysdk_real_name_auth_title_padding" android:paddingRight="15.0dip" android:paddingBottom="@dimen/com_tencent_ysdk_real_name_auth_title_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_tencent_ysdk_real_name_title" />
        <TextView android:textSize="@dimen/com_tencent_ysdk_real_name_auth_edit_text_size" android:textStyle="bold" android:textColor="#ff28292d" android:id="@id/com_tencent_ysdk_real_name_act_des1" android:paddingLeft="15.0dip" android:paddingTop="@dimen/com_tencent_ysdk_real_name_auth_text_top" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_tencent_ysdk_real_name_des1" />
        <TextView android:textSize="16.0dip" android:textColor="#ff47494c" android:paddingLeft="15.0dip" android:paddingTop="@dimen/com_tencent_ysdk_real_name_auth_text_top" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/com_tencent_ysdk_real_name_des2" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/com_tencent_ysdk_real_name_auth_edit_height" android:layout_marginLeft="50.0dip" android:layout_marginTop="@dimen/com_tencent_ysdk_real_name_auth_edit_top" android:layout_marginRight="50.0dip">
            <EditText android:textSize="@dimen/com_tencent_ysdk_real_name_auth_edit_text_size" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/com_tencent_ysdk_real_name_act_name" android:background="@drawable/com_tencent_ysdk_real_name_item_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/com_tencent_ysdk_real_name_name" android:singleLine="true" />
            <ImageView android:id="@id/com_tencent_ysdk_real_name_act_name_must" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/com_tencent_ysdk_real_name_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/com_tencent_ysdk_real_name_auth_edit_height" android:layout_marginLeft="50.0dip" android:layout_marginTop="@dimen/com_tencent_ysdk_real_name_auth_edit_top" android:layout_marginRight="50.0dip">
            <TextView android:textSize="@dimen/com_tencent_ysdk_real_name_auth_edit_text_size" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/com_tencent_ysdk_real_name_act_identity_type" android:background="@drawable/com_tencent_ysdk_real_name_item_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/com_tencent_ysdk_real_name_identity_type" />
            <ImageView android:id="@id/com_tencent_ysdk_real_name_act_identity_type_must" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/com_tencent_ysdk_real_name_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/com_tencent_ysdk_real_name_auth_edit_height" android:layout_marginLeft="50.0dip" android:layout_marginTop="@dimen/com_tencent_ysdk_real_name_auth_edit_top" android:layout_marginRight="50.0dip">
            <EditText android:textSize="@dimen/com_tencent_ysdk_real_name_auth_edit_text_size" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/com_tencent_ysdk_real_name_act_identity_num" android:background="@drawable/com_tencent_ysdk_real_name_item_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/com_tencent_ysdk_real_name_identity_num" android:singleLine="true" android:maxLength="200" />
            <ImageView android:id="@id/com_tencent_ysdk_real_name_act_identity_num_must" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/com_tencent_ysdk_real_name_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/com_tencent_ysdk_real_name_auth_check_box_top" android:layout_marginBottom="@dimen/com_tencent_ysdk_real_name_auth_check_box_top">
            <CheckBox android:id="@id/com_tencent_ysdk_real_name_agreement_check_box" android:background="@drawable/com_tencent_ysdk_real_name_checkbox_style" android:layout_width="18.0dip" android:layout_height="18.0dip" android:checked="true" android:button="@null" />
            <TextView android:textSize="12.0dip" android:textColor="#ff888f99" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/com_tencent_ysdk_real_name_agreement_ok" />
            <TextView android:textSize="12.0dip" android:textColor="#ff3399eb" android:id="@id/com_tencent_ysdk_real_name_act_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:text="@string/com_tencent_ysdk_real_name_agreement" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/com_tencent_ysdk_real_name_auth_edit_height" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="@dimen/com_tencent_ysdk_real_name_auth_button_top">
            <Button android:textSize="17.0dip" android:textColor="@drawable/com_tencent_ysdk_real_name_btn_text_frame_color" android:id="@id/com_tencent_ysdk_real_name_act_back" android:background="@drawable/com_tencent_ysdk_real_name_btn_frame_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/com_tencent_ysdk_real_name_back" android:layout_weight="1.0" />
            <Button android:textSize="17.0dip" android:textColor="@drawable/com_tencent_ysdk_real_name_btn_text_color" android:id="@id/com_tencent_ysdk_real_name_act_commit" android:background="@drawable/com_tencent_ysdk_real_name_btn_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/com_tencent_ysdk_real_name_commit" android:singleLine="true" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>