<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:paddingTop="0.0dip" android:paddingRight="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/com_tencent_ysdk_real_name_dialog_close" android:paddingLeft="5.0dip" android:paddingTop="15.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/com_tencent_ysdk_real_name_btn_close" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:id="@id/com_tencent_ysdk_real_name_dialog_img_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/com_tencent_ysdk_real_name_success" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff2d2d2e" android:id="@id/com_tencent_ysdk_real_name_dialog_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/com_tencent_ysdk_real_name_success" />
            <TextView android:textSize="12.0dip" android:textColor="#ff545659" android:id="@id/com_tencent_ysdk_real_name_dialog_tips_des" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/com_tencent_ysdk_real_name_success_des" />
            <TextView android:textSize="16.0dip" android:textColor="#ff61acf1" android:id="@id/com_tencent_ysdk_real_name_dialog_tips_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/com_tencent_ysdk_real_name_qq" />
        </LinearLayout>
        <Button android:textSize="18.0dip" android:id="@id/com_tencent_ysdk_real_name_dialog_confirm" android:background="#ff3997ee" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginTop="20.0dip" android:text="@string/com_tencent_ysdk_real_name_login" />
    </LinearLayout>
</ScrollView>