<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/com_tencent_ysdk_icon_bg_corner" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/com_tencent_ysdk_icon_error_title" android:background="#fff68a25" android:layout_width="fill_parent" android:layout_height="37.0dip" android:text="@string/error_title" />
    <LinearLayout android:gravity="center" android:layout_gravity="fill_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:gravity="center" android:id="@id/com_tencent_ysdk_icon_error_icon" android:background="@drawable/com_tencent_ysdk_icon_errorpageicon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="45.0dip" android:layout_below="@id/com_tencent_ysdk_icon_error_title" />
        <TextView android:textSize="13.0sp" android:textColor="#ff939393" android:id="@id/com_tencent_ysdk_icon_error_word" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/error_word" android:layout_below="@id/com_tencent_ysdk_icon_error_icon" />
        <Button android:textSize="14.0sp" android:textColor="#ff00a3ef" android:gravity="center" android:id="@id/com_tencent_ysdk_icon_fresh_btn" android:background="@drawable/com_tencent_ysdk_icon_common_errorpage_btn_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:minHeight="35.0dip" android:text="@string/disconnected_setting" android:layout_below="@id/com_tencent_ysdk_icon_error_word" />
    </LinearLayout>
</RelativeLayout>